Changed dockerfile and added actuator